<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/itemAddTown"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/itemAdd"
        android:visible="false" />
    <item
        android:id="@+id/itemChange"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/itemChange"
        android:visible="false" />
    <item
        android:id="@+id/itemInfoTown"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/itemInfoTown"
        android:visible="false" />
    <item
        android:id="@+id/itemHistoryWeather"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/itemHistoryWeather" />
    <item
        android:id="@+id/itemInfo"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/itemInfo" />
    <item
        android:id="@+id/itemSetting"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/itemSetting"
        android:visible="false" />
    <item
        android:id="@+id/itemClearFilter"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/itemClearFilter"
        android:visible="false" />
    <item
        android:id="@+id/itemClear"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/itemClear"
        android:visible="false" />
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="5"
        android:title="@string/title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
</menu>