<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/itemInfo"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/itemInfo" />
    <item
        android:id="@+id/itemWeatherCurrentTown"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/itemWeatherCurrentTown" />
    <item
        android:id="@+id/itemWeatherMap"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/itemWeatherMap" />
    <item
        android:id="@+id/itemHistoryWeather"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/itemHistoryWeather" />
    <item
        android:id="@+id/itemSetting"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/itemSetting" />

</menu>