<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.weather.setting.ActivitySettings"
        tools:ignore="ExtraText"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/windSpeed"
                android:text="@string/windSpeed"
                style="@style/check"/>

            <CheckBox
                android:id="@+id/pressure"
                android:text="@string/pressure"
                style="@style/check"/>
        </LinearLayout>

        <Switch
            android:id="@+id/themeSwitch"
            style="@style/check"
            android:layout_height="wrap_content"
            android:text="@string/theme"
            tools:ignore="UseSwitchCompatOrMaterialXml">
        </Switch>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>