<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/itemTown"
            style="@style/table"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="@dimen/list"
            tools:ignore="MissingConstraints"
            tools:text="@string/town" />
        <TextView
            android:id="@+id/itemDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="@dimen/list"
            android:gravity="left"
            style="@style/table"
            tools:text="@string/date_current"
            tools:ignore="MissingConstraints">
        </TextView>
        <TextView
            android:id="@+id/itemTemp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="@dimen/list"
            android:gravity="left"
            style="@style/table"
            tools:text="@string/temperature"
            tools:ignore="MissingConstraints">
        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>