<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:id="@+id/infoMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="36dp">

            <TextView
                android:id="@+id/townCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/town"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="@dimen/townCurrent"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/dateCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/date_current"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="@dimen/dateCurrent"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="@+id/townCurrent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="@+id/townCurrent"
            app:layout_constraintTop_toBottomOf="@+id/townCurrent" />

        <TextView
            android:id="@+id/timeCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_current"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/timeCurrent"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/dateCurrent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/dateCurrent"
            app:layout_constraintTop_toBottomOf="@+id/dateCurrent" />
        <ImageView
            android:id="@+id/imageTemperature"
            android:layout_width="@dimen/imageTemperatureW"
            android:layout_height="@dimen/imageTemperatureH"
            android:contentDescription="@string/imageContentDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeCurrent"
            app:srcCompat="@drawable/sun" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.example.androidlevel2_lesson1.ThermometerView
                android:layout_width="30dp"
                android:layout_height="60dp"
                android:id="@+id/thermometerView"
                app:level="0">
            </com.example.androidlevel2_lesson1.ThermometerView>

            <TextView
                android:id="@+id/temperatureCurrent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textAlignment="center"
                android:textSize="@dimen/temperatureCurrent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.356"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageTemperature"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/windSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtWindSpeed"
                    android:textSize="@dimen/windSpeed"
                    app:layout_constraintEnd_toEndOf="@+id/imageTemperature"
                    app:layout_constraintStart_toEndOf="@+id/temperatureCurrent" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtPressure"
                    android:textSize="@dimen/pressure"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoMain"
        app:layout_constraintVertical_bias="0.042" />
</androidx.constraintlayout.widget.ConstraintLayout>